@@ -734,12 +734,13 @@ class CodeGenerator(NodeVisitor):
                 self.indent()
                 self.writeline('if parent_template is not None:')
             self.indent()
-            if supports_yield_from:
+            if supports_yield_from and not self.environment.is_async:
                 self.writeline('yield from parent_template.'
                                'root_render_func(context)')
             else:
-                self.writeline('for event in parent_template.'
-                               'root_render_func(context):')
+                self.writeline('%sfor event in parent_template.'
+                               'root_render_func(context):' %
+                               (self.environment.is_async and 'async ' or ''))
                 self.indent()
                 self.writeline('yield event')
                 self.outdent()
